fdo#47495 fix RTF import of multiple shapes inside textframes

Change-Id: Iee8541ff9e88139648d45f08968476f2b1d4e1b3